--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,16 @@
+Mako==0.8.1
+Markdown==2.3.1
+MarkupSafe==0.18
+MySQL-python==1.2.4
 Scrapy==0.16.5
 Twisted==13.1.0
 argparse==1.2.1
+beautifulsoup4==4.2.1
+bottle==0.11.6
 lxml==3.2.3
 pyOpenSSL==0.13
+pygreen==1.0.3
 w3lib==1.3
+waitress==0.8.5
 wsgiref==0.1.2
 zope.interface==4.0.5
