--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ Twisted==13.1.0
 argparse==1.2.1
 beautifulsoup4==4.2.1
 bottle==0.11.6
+jsonpickle==0.4.0
 lxml==3.2.3
 pyOpenSSL==0.13
 pygreen==1.0.3
